# The-Chronicler

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_COMPLETION_REPORT_2025-12-31.md  AUDIT_PROMPT.md  Chronicler_repair_prompt.md  Dockerfile  Dockerfile.poetry  Dockerfile.uv  ENV_TRANSFER_GUIDE.md  GEMINI.md  README.md  SECURITY_AUDIT_REPORT.md  TESTING_RESULTS.md  alembic.ini  analyze_page.py  c_1_18_1_data.json  commit_message.txt  commit_message_v2.txt  docker-compose.yml  extract_talents.py  fly.toml  main.py  pyproject.toml  requirements.txt  root_data.json  scrape_talents.py  test_settings.py
.gemini_temp_run/: run_pytest.sh
agents/: Amelre.json  Amelre.md  Avala.json  Avala.md  Bridgekeeper.json  ChroniclerThaldrin.json  ChroniclerThaldrin.md  Dreadcleave.json  Failsafe.json  Finnara.json  Finnara.md  GUILD_README.md  Gearspark.json  GrimstoneEarthmender.json  Hyena.json  Hyena.md  Ironwulf.json  Ironwulf.md  Jilbax.json  Jilbax.md  Lightweaver.json  Maltharion.json  Maltharion.md  MasterBorrin.json  MasterBorrin.md  MemoryWeaver.json  Mooganna.json  Mooganna.md  Polyglot.json  Quickcache.json  Rodrim.json  Rodrim.md  Stabili.json  Stabili.md  Steamwheedle.json  Sunshatter.json  Sunshatter.md  Tdci.json  Tdci.md  TestSentinel.json  (+8 more)
alembic/: env.py
commands/: __init__.py  bank_commands.py  character_commands.py  officer_commands.py  talent_commands.py
config/: __init__.py  settings.py
data/: talent_trees_turtle_wow.csv  talent_trees_turtle_wow.json  talents_turtle_wow.csv  talents_turtle_wow.json
db/: database.py  (+1 more)
mcp/: main.py  (+5 more)
(+120 files in other folders)
