[tool.poetry]
name = "azeroth-bound-bot"
version = "1.0.0"
package-mode = false
description = "Discord bot for WoW Classic+ guild management with webhook-driven architecture"
authors = ["Paweł Kochanowiz <https://github.com/pkochanowicz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
gspread = "^6.0.0"
google-auth = "^2.27.0"
google-auth-oauthlib = "^1.2.0"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.14.3"
aiohttp = "^3.9.3"
pydantic = "^2.12.5"
sqlalchemy = "^2.0.0"
pydantic-settings = "^2.0.0"
fastapi = "^0.111.0"
playwright = "^1.40.0"
psycopg2-binary = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
httpx = "^0.27.0"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = "test_*.py"
